--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
 aiofiles==22.1.0
+annotated-types==0.7.0
+anyio==3.7.1
+certifi==2024.8.30
+charset-normalizer==2.1.1
 cloudscraper==1.2.64
+exceptiongroup==1.2.2
+garth==0.4.46
+h11==0.12.0
+httpcore==0.15.0
 httpx==0.23.0
+idna==3.8
+oauthlib==3.2.2
 pycryptodome==3.17
+pydantic==2.9.1
+pydantic_core==2.23.3
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
 requests==2.28.1
+requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.3.1
+typing_extensions==4.12.2
+urllib3==1.26.20
 webdav4==0.9.8
